--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,9 +410,7 @@ header .navbar ul li a:hover {
 .resumebtn {
   margin-top: 6rem;
   font-size: 2rem;
-}
-.resumebtn:hover {
-  font-size: 3rem;
+  margin-left: 1rem;
 }
 .resumebtn .btn {
   padding: 1.7rem 3rem;
@@ -438,6 +436,15 @@ header .navbar ul li a:hover {
 }
 .resumebtn .btn:hover i {
   transform: translateX(5px);
+}
+#resume-div {
+  background-color: rgb(115, 3, 167);
+  color: #fff;
+  width: 100px;
+  border-radius: 20px;
+}
+#resume-div:hover {
+  background-color: rgb(73, 3, 105);
 }
 /* about media queries starts*/
 @media screen and (max-width: 600px) {
@@ -1096,7 +1103,7 @@ form .button-area {
 .footer {
   min-height: auto;
   padding-top: 0;
-  background: linear-gradient(to bottom, #a3a3a3, #1d0156);
+  background: #fff;
 }
 .footer .box-container {
   display: flex;
@@ -1109,13 +1116,13 @@ form .button-area {
 }
 .footer .box-container .box h3 {
   font-size: 2.5rem;
-  color: #fff;
+  color: rgb(115, 3, 167);
   padding-bottom: 1rem;
   font-weight: normal;
 }
 .footer .box-container .box p {
   font-size: 1.5rem;
-  color: #ccc;
+  color: rgb(77, 76, 76);
   padding: 0.7rem 0;
   text-transform: none;
 }
@@ -1125,7 +1132,7 @@ form .button-area {
 }
 .footer .box-container .box a {
   font-size: 1.5rem;
-  color: rgb(238, 238, 238);
+  color: #000;
   padding: 0.3rem 0;
   display: block;
 }
